# Candle

./: .gitignore  CMakeLists.txt  com.github.Denvi.Candle.yaml  readme.md
.github/workflows/: build.yml  build_linux.yml  build_mac.yml  build_win.yml  build_win32.yml
src/: CMakeLists.txt  Info.plist  candle.desktop  candle.pro  frmmain.cpp  frmmain.h  frmmain.ui  frmsettings.cpp
src/candle/: CMakeLists.txt  candle.pro  frmmain.cpp  frmmain.h  frmmain.ui  frmsettings.cpp
src/candle/drawers/: gcodedrawer.cpp
src/candle/parser/: gcodeparser.cpp  gcodeparser.h  gcodeviewparse.cpp  pointsegment.cpp
src/candle/tables/: gcodetablemodel.cpp
src/candle/translations/: candle_es.qm  candle_fr.qm  candle_pt.qm  candle_ru.qm
src/candle/widgets/: glwidget.cpp
src/candleplugins/: CMakeLists.txt  candleplugins.pro
src/candleplugins/camera/: translation_ru.ts
src/candleplugins/coordinatesystem/: script.js  translation_ru.ts
src/candleplugins/emergencybutton/: translation_ru.qm  translation_ru.ts
src/candleplugins/usercommands/: translation_ru.ts
src/designerplugins/cameraplugin/: cameraplugin.cpp  camerawidget.cpp
src/designerplugins/customwidgetsplugin/: colorpickerplugin.cpp  sliderboxplugin.cpp  sliderplugin.cpp  styledtoolbuttonplugin.cpp
src/drawers/: gcodedrawer.cpp  gcodedrawer.h  shaderdrawable.cpp  shaderdrawable.h  tooldrawer.cpp
src/images/: candle.icns
src/parser/: arcproperties.h  basesegment.h  gcodeparser.cpp  gcodeparser.h  gcodepreprocessorutils.cpp  gcodepreprocessorutils.h  gcodeviewparse.cpp  gcodeviewparse.h  linesegment.cpp  linesegment.h  pointsegment.h
src/scriptbindings/generated_cpp/com_trolltech_qt_core/: qtscript_QDir.cpp  qtscript_QDirIterator.cpp  qtscript_QEventLoop.cpp  qtscript_QFileDevice.cpp  qtscript_QIODevice.cpp  qtscript_QLocale.cpp  qtscript_QSocketNotifier.cpp  qtscript_QTextBoundaryFinder.cpp  qtscript_QTextCodec.cpp  qtscript_QTextStream.cpp  qtscript_Qt.cpp
src/scriptbindings/generated_cpp/com_trolltech_qt_gui/: qtscript_QImageIOPlugin.cpp  qtscript_QPaintEngine.cpp  qtscript_QPainter.cpp  qtscript_QTextDocument.cpp  qtscript_QTextItem.cpp
src/scriptbindings/generated_cpp/com_trolltech_qt_network/: qtscript_QNetworkInterface.cpp  qtscript_QNetworkProxy.cpp
src/scriptbindings/generated_cpp/com_trolltech_qt_opengl/: qtscript_QGLContext.cpp  qtscript_QGLShader.cpp
src/scriptbindings/generated_cpp/com_trolltech_qt_printsupport/: qtscript_QAbstractPrintDialog.cpp
src/scriptbindings/generated_cpp/com_trolltech_qt_sql/: qtscript_QSql.cpp
src/scriptbindings/generated_cpp/com_trolltech_qt_widgets/: qtscript_QAbstractSpinBox.cpp  qtscript_QColorDialog.cpp  qtscript_QDateTimeEdit.cpp  qtscript_QDialogButtonBox.cpp  qtscript_QDockWidget.cpp  qtscript_QFileDialog.cpp  qtscript_QFontComboBox.cpp  qtscript_QFontDialog.cpp  qtscript_QGraphicsBlurEffect.cpp  qtscript_QGraphicsEffect.cpp  qtscript_QGraphicsItem.cpp  qtscript_QGraphicsScene.cpp  qtscript_QInputDialog.cpp  qtscript_QItemSelectionModel.cpp  qtscript_QMainWindow.cpp  qtscript_QMdiArea.cpp  qtscript_QMdiSubWindow.cpp  qtscript_QMessageBox.cpp  qtscript_QStyle.cpp  qtscript_QStyleOptionButton.cpp  qtscript_QStyleOptionFrame.cpp  qtscript_QStyleOptionTab.cpp  qtscript_QStyleOptionToolBar.cpp  qtscript_QStyleOptionToolButton.cpp  qtscript_QStyleOptionViewItem.cpp  qtscript_QWidget.cpp
src/scriptbindings/qtbindings/: qtbindingsbase.pri
src/scriptbindings/qtbindings/qtscript_custom/: CMakeLists.txt  qtscript_custom.pro
src/tables/: gcodetablemodel.cpp  gcodetablemodel.h
src/translations/: candle_es.ts  candle_fr.ts  candle_pt.ts  candle_ru.ts
src/utils/: interpolation.h
src/widgets/: glwidget.cpp  glwidget.h  groupbox.cpp  sliderbox.cpp
tools/: pe_set_stripped.py
